sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return pos2indice(Array(getTrouBase(),getTrouPosition()))
  ^